<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/detail_coordinator_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/background_color"
   tools:context=".ui.detail.DetailActivity">

   <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <com.google.android.material.appbar.CollapsingToolbarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:contentScrim="@color/purple_500"
         app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
         app:title="@string/toolbar_title_detail">

         <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height_size"
            app:layout_collapseMode="parallax">

            <ImageView
               android:id="@+id/detail_news_cover"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:contentDescription="@string/article_cover_dummy"
               android:scaleType="centerCrop" />

            <View
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/cover_effect_dark" />

         </androidx.constraintlayout.widget.ConstraintLayout>

         <androidx.appcompat.widget.Toolbar
            android:id="@+id/detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

      </com.google.android.material.appbar.CollapsingToolbarLayout>

   </com.google.android.material.appbar.AppBarLayout>

   <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/detail_favorite_fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_margin="24dp"
      android:contentDescription="@string/detail_fab_text"
      app:backgroundTint="@color/purple_200"
      app:srcCompat="@drawable/ic_fav_outlined"
      app:tint="@color/white" />

   <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
            android:id="@+id/detail_news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/article_title_dummy"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

         <TextView
            android:id="@+id/detail_news_published_at"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/article_published_at"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/detail_news_title"
            app:layout_constraintStart_toStartOf="@id/detail_news_title"
            app:layout_constraintTop_toBottomOf="@id/detail_news_title" />

         <View
            android:id="@+id/detail_line_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/line"
            app:layout_constraintEnd_toEndOf="@id/detail_news_title"
            app:layout_constraintStart_toStartOf="@id/detail_news_title"
            app:layout_constraintTop_toBottomOf="@id/detail_news_published_at" />

         <TextView
            android:id="@+id/detail_news_authors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/detail_authors_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/detail_news_title"
            app:layout_constraintTop_toBottomOf="@id/detail_line_view" />

         <TextView
            android:id="@+id/detail_news_authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/article_authors_dummy"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/detail_news_title"
            app:layout_constraintStart_toStartOf="@id/detail_news_title"
            app:layout_constraintTop_toBottomOf="@id/detail_news_authors_label" />

         <TextView
            android:id="@+id/detail_news_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/article_content_dummy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/detail_news_title"
            app:layout_constraintStart_toStartOf="@id/detail_news_title"
            app:layout_constraintTop_toBottomOf="@id/detail_news_authors" />

         <TextView
            android:id="@+id/detail_news_see_more_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/detail_see_more_label"
            android:textColor="@color/purple_200"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@id/detail_news_title"
            app:layout_constraintTop_toBottomOf="@id/detail_news_content" />

      </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>